# chowdsp_wdf

./: .clang-tidy  .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  chowdsp_wdf_clang_tidy.cpp
.github/workflows/: auto-format.yml  bench.yml  clang-tidy.yml  cov.yml  docs.yml  test.yml
bench/: CMakeLists.txt  WrightOmegaBench.cpp
cmake/: CXXStandard.cmake
doxygen/: Doxyfile
include/chowdsp_wdf/: chowdsp_wdf.h
include/chowdsp_wdf/math/: omega.h  sample_type.h  signum.h
include/chowdsp_wdf/rtype/: root_rtype_adaptor.h  rtype.h  rtype_adaptor.h  rtype_detail.h  wdf_rtype.h
include/chowdsp_wdf/util/: defer_impedance.h
include/chowdsp_wdf/wdf/: wdf.h  wdf_adaptors.h  wdf_base.h  wdf_nonlinearities.h  wdf_one_ports.h  wdf_sources.h
include/chowdsp_wdf/wdft/: wdft.h  wdft_adaptors.h  wdft_base.h  wdft_nonlinearities.h  wdft_one_ports.h  wdft_sources.h
notes/: combining_wdfs.md  combining_wdfs.typ
single_include/chowdsp_wdf/: chowdsp_wdf.h
tests/: BasicCircuitTest.cpp  BassmanToneStack.h  BassmanToneStackPoly.h  BaxandallEQ.h  BaxandallEQPoly.h  CMakeLists.txt  CombinedComponentTest.cpp  OmegaTest.cpp  RTypeTest.cpp  SIMDTest.cpp  StaticBasicCircuitTest.cpp  TestRunner.cpp
tools/amalgamate/: CHANGES.md  README.md  amalgamate.py  config_chowdsp_wdf.json  run_amalgamate.sh
